[package]
name = "pallet-wwc-governance"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WWC blockchain governance: two-track system (technical=votable, monetary=forbidden)"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-std = { version = "8.0.0", default-features = false }
sp-runtime = { version = "24.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
]
