[package]
name = "pallet-wwc-token"
version = "0.1.0"
edition = "2021"
authors = ["Soflution <contact@soflution.com>"]
description = "WWC (World Wide Currency) token pallet for Substrate"
license = "Apache-2.0"
repository = "https://github.com/Soflution1/wwc"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
frame-support = { version = "38.0", default-features = false }
frame-system = { version = "38.0", default-features = false }
sp-std = { version = "14.0", default-features = false }
sp-runtime = { version = "39.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
]
